syntax = "proto3";

option csharp_namespace = "GrpcServiceTranscoding";
import "Protos/google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

//package KeyPoints;

service KeyPointsService {
  rpc GetById(GetByIdRequest) returns (GetByIdResponse) {}
  rpc GetAll(GetAllRequest) returns (GetAllResponse) {
       option (google.api.http) = {
          get: "/tour-authoring"
       };
  }
  rpc GetByTourId(GetByTourIdRequest) returns (GetByTourIdResponse) {
      option (google.api.http) = {
          get: "/market-place/tours/key-points"
       };
  }
  rpc Create(CreateRequest) returns (CreateResponse) {
      option (google.api.http) = {
          post: "/tour-authoring/tours/key-points",
          body: "*"
       };
  }
  rpc Update(UpdateRequest) returns (UpdateResponse) {
      option (google.api.http) = {
          put: "/tour-authoring/tours/key-points",
          body: "*"
       };
  }
  rpc Delete(DeleteRequest) returns (DeleteResponse) {
      option (google.api.http) = {
          delete: "/tour-authoring/tours/key-points"
       };
  }
}

message KeyPoint {
  int64 ID = 1;
  int64 TourId = 2;
  string Name = 3;
  string Description = 4;
  double Longitude = 5;
  double Latitude = 6;
  string LocationAddress = 7;
  string ImagePath = 8;
  int64 Order = 9;
}

message GetByIdRequest {
  string ID = 1;
}

message GetByIdResponse {
  KeyPoint keyPoint = 1;
}

message GetAllRequest {
}

message GetAllResponse {
  repeated KeyPoint keyPoints = 1;
}

message GetByTourIdRequest {
  string TourId = 1;
}

message GetByTourIdResponse {
  repeated KeyPoint keyPoints = 1;
}

message CreateRequest {
  KeyPoint keyPoint = 1;
}

message CreateResponse {
}

message UpdateRequest {
  KeyPoint keyPoint = 1;
}

message UpdateResponse {
}

message DeleteRequest {
  string ID = 1;
}

message DeleteResponse {
}
